--- a/src/styles/credit-view.css
+++ b/src/styles/credit-view.css
@@ -1,11 +1,13 @@
 .credit-container {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     padding: 60px 20px;
     text-align: center;
-    background: linear-gradient(135deg, #007BFF 0%, #e3f2fd 100%);
+    background: linear-gradient(135deg, #007BFF 0%, #a7daff 100%);
     color: #fff;
     animation: fadeIn 1s ease forwards;
+    flex-grow: 1;
+    place-content: center;
   }
   
   .credit-title {
