--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -39,18 +39,6 @@ h6 {
   margin-bottom: 0.75rem;
 }
 
-/* h1 {
-  font-size: 2.8rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.5rem;
-} */
-
 p {
   margin-bottom: 1rem;
 }
@@ -72,19 +60,17 @@ hr {
   margin: 2rem 0;
 }
 
+
 header {
   background-color: var(--primary);
-  color: rgb(243, 163, 79);
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 999999;
   background-color: #007BFF;
 }
 
 .header-container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -141,7 +127,7 @@ main {
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.05);
 }
 
-.footer-inner {
+/* .footer-inner {
   max-width: 64rem;
   margin: 0 auto;
   padding: 1rem 1rem;
@@ -155,7 +141,7 @@ main {
 .footer-right {
   text-align: center;
   color: var(--background-color);
-}
+} */
 
 .email-link {
   color: #fad660;
@@ -196,7 +182,11 @@ main {
 .site-title {
   font-size: 2rem;
   font-weight: bold;
+  inline-size: none;
+  white-space: nowrap;
+  padding-right: 50px;
 }
+
 
 .nav-links {
   display: flex;
@@ -210,7 +200,6 @@ button {
   text-decoration: none;
   font-weight: bold;
   color: #ffffff;
-  padding: 0.5rem 1rem;
   border-radius: 8px;
   transition: background-color 0.3s, box-shadow 0.3s;
 }
@@ -245,37 +234,6 @@ button {
   height: 3px;
   background: #333;
   border-radius: 2px;
-}
-
-.not-found-container {
-  padding: 2rem;
-  text-align: center;
-  color: #444;
-}
-
-.not-found-container h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  color: #e74c3c;
-}
-
-.not-found-container p {
-  font-size: 1.1rem;
-  margin-bottom: 2rem;
-}
-
-.not-found-container .back-home {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background-color: #3498db;
-  color: white;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-}
-
-.not-found-container .back-home:hover {
-  background-color: #2980b9;
 }
 
 @keyframes fadeIn {
@@ -315,6 +273,7 @@ button {
     position: absolute;
     top: 60px;
     left: 0;
+    padding: 0;
     flex-direction: column;
     background: white;
     width: 100%;
@@ -368,4 +327,3 @@ button {
     transform: translateY(0);
   }
 }
-
