--- a/src/styles/home-view.css
+++ b/src/styles/home-view.css
@@ -1,5 +1,5 @@
 .hero {
-  background: url('../public/images/rumah-sakit.jpg') center/cover no-repeat;
+  background: url('../public/images/klinik-adera.webp') center/cover no-repeat;
   height: 300px;
   display: flex;
   align-items: center;
@@ -15,8 +15,8 @@
   align-items: center;
   margin: 0 auto;
   text-align: center;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .hero h1 {
@@ -156,6 +156,7 @@
   padding: 2rem 1rem;
   text-align: center;
 }
+
 .intro-full-width-container .intro {
   max-width: 800px;
   margin: 0 auto;
@@ -214,22 +215,22 @@
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-  
+
   .gallery {
     display: flex;
   }
-  
+
   .image-card {
     flex: 0 0 100%;
     position: relative;
     scroll-snap-align: start;
   }
-  
+
   .gallery-container .gallery {
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
   }
-  
+
   .gallery-img {
     width: 100%;
   }
