--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,7 +44,7 @@ p {
 }
 
 a {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
   text-decoration: none;
   transition: color 0.3s ease;
 }
