--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -75,6 +75,9 @@ header {
   align-items: center;
   justify-content: space-between;
   position: relative;
+  padding-inline: 1rem;
+  /* max-width: 1280px; */
+  margin-inline: auto;
 }
 
 header h1 {
@@ -111,6 +114,7 @@ nav a:hover {
 main {
   margin: 0 auto;
   width: 100%;
+  height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -266,6 +270,15 @@ button {
 
   .hamburger {
     display: flex;
+  }
+
+  .header-container {
+    padding-inline: 1rem;
+  }
+
+  #menu-toggle {
+    padding: 0.5rem;
+    /* biar tombol tidak nempel pinggir */
   }
 
   .nav-links {
